# aiunderthehood-sample-code

./: .env.sample  .gitignore  README.md
python/: requirements.txt
rust/: Cargo.toml  README.md
rust/agentic-ai/agent-architecture/r-02-planner-reasoner/: Cargo.toml
rust/agentic-ai/agent-architecture/r-02-scratchpad-working-memory/: Cargo.toml
rust/agentic-ai/fundamentals/agent-cognitive-architecture/: Cargo.toml
rust/agentic-ai/fundamentals/inference-time-compute/: Cargo.toml
rust/agentic-ai/fundamentals/modern-llm-primitives/: Cargo.toml
rust/agentic-ai/fundamentals/what-is-agent-gemini/: Cargo.toml
rust/agentic-ai/fundamentals/what-is-agent-ollama/: Cargo.toml
rust/agentic-ai/planning-systems/rig-example/: Cargo.toml
rust/agentic-ai/r-00-a-setup/: Cargo.toml
rust/agentic-ai/r-00-a-setup/src/: main.rs
rust/agentic-ai/r-01-a-what-is-agent/: Cargo.toml
rust/agentic-ai/r-01-a-what-is-agent/src/: main.rs
rust/agentic-ai/r-01-b-agent-cognitive-architecture/: Cargo.toml
rust/agentic-ai/r-01-b-agent-cognitive-architecture/src/: main.rs
rust/agentic-ai/r-01-c-inference-time-compute/: Cargo.toml
rust/agentic-ai/r-01-c-inference-time-compute/src/: main.rs
rust/agentic-ai/r-01-d-modern-llm-primitives/: Cargo.toml
rust/agentic-ai/r-01-d-modern-llm-primitives/src/: pag.rs
rust/agentic-ai/r-02-the-anatomy-of-agent/: Cargo.toml
rust/agentic-ai/setup/: Cargo.toml
rust/agentic-ai/setup/gemini-setup/: Cargo.toml
rust/agentic-ai/setup/ollama-setup/: Cargo.toml
rust/agentic-ai/what-is-agent/: Cargo.toml
rust/ml/placeholder/: Cargo.toml
(+29 files in other folders)
