[workspace]
members = [
    "ml/*",
    "agentic-ai/*"
]
resolver = "2"

# You can even share dependencies across ALL projects here
[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gemini-client-api = "7.4.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
